--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 <path d="M43.0703 0H5.05946C2.20541 0 0 2.20541 0 5.05946V43.0703C0 45.7946 2.20541 48 5.05946 48H43.0703C45.7946 48 48.1297 45.7946 48.1297 42.9405V5.05946C48 2.20541 45.7946 0 43.0703 0ZM45.7946 43.0703C45.7946 44.627 44.627 45.7946 43.0703 45.7946H5.05946C3.5027 45.7946 2.33514 44.627 2.33514 43.0703V5.05946C2.33514 3.63243 3.5027 2.33513 5.05946 2.33513H43.0703C44.627 2.33513 45.7946 3.5027 45.7946 5.05946V43.0703Z" fill="#FFD747"/>
 </g>
 <defs>
-<clipPath id="clip0_2312_2263">
+<clipPath>
 <rect width="48" height="48" fill="white"/>
 </clipPath>
 </defs>
@@ -185,7 +185,7 @@
 				<div class="swiper-pagination"></div>
 			</div>
 			<!-- start sServiceHead-->
-			<div class="sServiceHead section" id="sServiceHead">
+			<div class="sServiceHead section">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6 col-lg-4 col-xl-3">
@@ -237,7 +237,7 @@
 			</div>
 			<!-- end sServiceHead-->
 			<!-- start sCard-->
-			<div class="sCard section" id="sCard">
+			<div class="sCard section">
 				<div class="container-wide">
 					<div class="row">
 						<div class="col-md-12">
@@ -377,7 +377,7 @@
 <path d="M43.0703 0H5.05946C2.20541 0 0 2.20541 0 5.05946V43.0703C0 45.7946 2.20541 48 5.05946 48H43.0703C45.7946 48 48.1297 45.7946 48.1297 42.9405V5.05946C48 2.20541 45.7946 0 43.0703 0ZM45.7946 43.0703C45.7946 44.627 44.627 45.7946 43.0703 45.7946H5.05946C3.5027 45.7946 2.33514 44.627 2.33514 43.0703V5.05946C2.33514 3.63243 3.5027 2.33513 5.05946 2.33513H43.0703C44.627 2.33513 45.7946 3.5027 45.7946 5.05946V43.0703Z" fill="#FFD747"/>
 </g>
 <defs>
-<clipPath id="clip0_2312_2263">
+<clipPath>
 <rect width="48" height="48" fill="white"/>
 </clipPath>
 </defs>
